--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpunit/phpunit": "^11.0 || ^12.0",
+        "phpunit/phpunit": "^12.0",
         "rancoud/database": "^7.0"
     },
     "scripts": {
